RESOLVED FIXED 257156
SVGTextLayoutEngine m_textPathStartOffset is uninitialized
https://bugs.webkit.org/show_bug.cgi?id=257156
Summary SVGTextLayoutEngine m_textPathStartOffset is uninitialized
Nikolas Zimmermann
Reported 2023-05-22 14:45:35 PDT
During a lldb session, I spotted that 'm_textPathStartOffset' is uninitialized -- fix that.
Attachments
Nikolas Zimmermann
Comment 1 2023-05-22 14:48:08 PDT
EWS
Comment 2 2023-05-26 07:56:51 PDT
Committed 264580@main (835136aa12f7): <https://commits.webkit.org/264580@main> Reviewed commits have been landed. Closing PR #14207 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-05-26 07:57:17 PDT
Note You need to log in before you can comment on or make changes to this bug.