SVGTextLayoutEngine m_textPathStartOffset is uninitialized https://bugs.webkit.org/show_bug.cgi?id=257156

Reviewed by Rob Buis.

Initialize all SVGTextLayoutEngine members using brace initializaation
in the header, to avoid uninitialized variables, like m_textPathStartOffset.

It has no practical consequences, as it's always set before entering
path-layout mode - however we should clean it up to avoid this in future.

Covered by existing tests.

* Source/WebCore/rendering/svg/SVGTextLayoutEngine.cpp:
(WebCore::SVGTextLayoutEngine::SVGTextLayoutEngine):
* Source/WebCore/rendering/svg/SVGTextLayoutEngine.h:

Canonical link: https://commits.webkit.org/264580@main